src/mermaid/ascii/gantt/snapshots/veol__mermaid__ascii__gantt__render__tests__render_ascii_charset.snap
---
source: src/mermaid/ascii/gantt/render.rs
expression: render_ascii(src)
---
ASCII

                Day 0     1         2          3         4         5          6         7          8
                |---------------+---------------+---------------+---------------+---------------+--|
A
  T1           [###############################                                                    ]
  T2 (active)  [                                         +++++++++++++++++++++                     ]
  M            [                                                                        o          ]
