src/mermaid/ascii/gantt/snapshots/veol__mermaid__ascii__gantt__render__tests__render_long_task_label_truncates.snap
---
source: src/mermaid/ascii/gantt/render.rs
expression: render(src)
---
                             Day 0         1             2             3             4             5
                             ├─────────────┼─────────────┼─────────────┼─────────────┼─────────────┤
A
  This is a really really…  [██████████████████████████████████████████████████████████████████████]
