src/mermaid/ascii/gantt/snapshots/veol__mermaid__ascii__gantt__render__tests__render_task_crit.snap
---
source: src/mermaid/ascii/gantt/render.rs
expression: render(src)
---
              Day 0       1           2           3           4           5           6            7
              ├────────────────┼────────────────┼────────────────┼────────────────┼────────────────┤
A
  T1         [████████████████████████████████████░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░]
  T2 (crit)  [░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░█████████████████████████████████████████████████]
