src/mermaid/ascii/gantt/snapshots/veol__mermaid__ascii__gantt__render__tests__render_two_sections.snap
---
source: src/mermaid/ascii/gantt/render.rs
expression: render(src)
---
       Day 0                                    5                                         10
       ├─────────────────┼─────────────────┼─────────────────┼─────────────────┼─────────────────┼─┤
Alpha
  A1  [█████████████████████████░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░]
Beta
  B1  [░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░█████████████████████████████████░░░░░░░░░░░░░░░░░░░░░░░░░░]
  B2  [░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░█████████████████]
