src/mermaid/ascii/gantt/snapshots/veol__mermaid__ascii__gantt__render__tests__render_with_title.snap
---
source: src/mermaid/ascii/gantt/render.rs
expression: render(src)
---
Project Plan

           Day 0            1                 2                3                 4                 5
           ├────────────────┼────────────────┼────────────────┼────────────────┼────────────────┼──┤
A
  Task 1  [████████████████████████████████████████████████████████████████████████████████████████]
